w08 fixed, w09 finished grid alignment

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -289,7 +289,10 @@ footer p {
 #join-main {
     display: flex;
     flex-direction: column;
-    height: 680px;
+}
+
+#join-main h1 {
+    text-align: center;
 }
 
 form {
@@ -305,7 +308,14 @@ form small {
 }
 
 input, select, textarea {
+    border-radius: 1em;
+    padding: 5px;
+    background-color: #ffdeb8;
     width: 100%;
+}
+
+input:hover, input:focus, textarea:hover, textarea:focus {
+    background-color: #fff78c;
 }
 
 #description {
@@ -330,7 +340,14 @@ button {
 }
 
 #levels {
-    display: none;
+    margin: 10px auto;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    background-color: #245375;
+    border-radius: 1.5em;
+    max-width: 400px;
+    order: 0;
 }
 
 /*-----Thank You Specific CSS-----*/
@@ -342,3 +359,46 @@ button {
 }
 
 /*-----Directory Specific-----*/
+#directory-main{
+    display: flex;
+    flex-direction: column;
+    background-color: #0a2233;
+}
+
+#directory-button {
+    margin: 10px auto;
+}
+
+/* -----Cards----- */
+.cards {
+    border: none;
+    background-color: transparent;
+    color: #000000;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.cards section {
+    background-color: #F0ECD1;
+    margin: 0 auto;
+    width: 300px;
+}
+
+.cards p {
+    margin: 0;
+}
+
+.cards h2, .cards h3 {
+    margin: 0;
+    padding: 10px 0px;
+    text-shadow: none;
+    background-color: rgba(0,0,0,0.2);
+}
+
+.cards img {
+    height:auto;
+}
+
+/* -----List----- */
+
